# Code-Test

./: .gitignore  Dockerfile  README.md  celery_app.py  deployment.yaml  docker-compose.yml  main.py  pokemon.py  pyproject.toml  service.yaml  tasks.py  test_auth.db  test_auth.py  test_pokemon.py  test_pokemon_fixture.py  test_tasks.py
.github/workflows/: python-app.yml
